# ant-sim

./: CMakeLists.txt
src/: ant.cpp  ant.h  food.h  main.cpp  utils.h
